[package]
name = "window_focus_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
windows = { version = "0.44", features = ["Win32", "Win32_UI", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
windows-hotkeys = "0.2.1"
winvd = "0.0.40"
