[package]
name = "KRustFocus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.17", features = ["derive"] }
tray-item = "0.8.0"
windows = { version = "0.44", features = ["Win32", "Win32_UI", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
windows-hotkeys = "0.2.1"
winvd = "0.0.40"


[build-dependencies]
windres = "*"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
strip = true        # Automatically strip symbols from the binary.